<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0"         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">    <modelVersion>4.0.0</modelVersion>    <groupId>it.uninsubria.laboratorioa</groupId>    <artifactId>TheKnifeProject</artifactId>    <version>1.0</version>    <name>The Knife</name>    <properties>        <maven.compiler.source>17</maven.compiler.source>        <maven.compiler.target>17</maven.compiler.target>        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>        <destination.dir>${basedir}/bin</destination.dir>    </properties>    <build>        <finalName>${project.artifactId}-${project.version}</finalName>        <resources>            <resource>                <directory>src/main/resources</directory>                <filtering>true</filtering>            </resource>        </resources>        <plugins>            <plugin>                <groupId>org.apache.maven.plugins</groupId>                <artifactId>maven-shade-plugin</artifactId>                <version>3.3.0</version>                <executions>                    <execution>                        <phase>package</phase>                        <goals><goal>shade</goal></goals>                        <configuration>                            <filters>                                <filter>                                    <artifact>*:*</artifact>                                    <excludes>                                        <exclude>META-INF/versions/19/**</exclude>                                    </excludes>                                </filter>                            </filters>                            <relocations>                                <relocation>                                    <pattern>com.fasterxml.jackson</pattern>                                    <shadedPattern>it.uninsubria.laboratorioa.lib.jackson</shadedPattern>                                </relocation>                                <relocation>                                    <pattern>com.google.i18n.phonenumbers</pattern>                                    <shadedPattern>it.uninsubria.laboratorioa.libs.phonenumbers</shadedPattern>                                </relocation>                            </relocations>                            <transformers>                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">                                    <mainClass>it.uninsubria.laboratorioa.TheKnife</mainClass>                                </transformer>                            </transformers>                        </configuration>                    </execution>                    <execution>                        <id>move-jar-to-bin</id>                        <phase>package</phase>                        <configuration>                            <target>                                <mkdir dir="${project.basedir}/bin" />                                <copy file="${project.build.directory}/${project.build.finalName}.jar"                                      tofile="${project.basedir}/bin/${project.build.finalName}.jar" />                            </target>                        </configuration>                    </execution>                </executions>            </plugin>            <plugin>                <groupId>org.apache.maven.plugins</groupId>                <artifactId>maven-antrun-plugin</artifactId>                <version>3.1.0</version>                <executions>                    <execution>                        <id>move-jar-to-bin</id>                        <phase>package</phase>                        <goals>                            <goal>run</goal>                        </goals>                        <configuration>                            <target>                                <mkdir dir="${destination.dir}"/>                                <delete file="${destination.dir}/${project.build.finalName}.jar"/>                                <copy file="${project.build.directory}/${project.build.finalName}.jar" todir="${destination.dir}"/>                            </target>                        </configuration>                    </execution>                </executions>            </plugin>        </plugins>    </build>    <repositories>        <repository>            <id>jcenter</id>            <url>https://jcenter.bintray.com/</url>        </repository>    </repositories>    <dependencies>        <!-- Jackson -->        <dependency>            <groupId>com.fasterxml.jackson.core</groupId>            <artifactId>jackson-databind</artifactId>            <version>2.15.3</version> <!-- Or any 2.15.x -->        </dependency>        <dependency>            <groupId>com.fasterxml.jackson.core</groupId>            <artifactId>jackson-core</artifactId>            <version>2.15.3</version>        </dependency>        <dependency>            <groupId>com.googlecode.libphonenumber</groupId>            <artifactId>libphonenumber</artifactId>            <version>8.13.27</version>        </dependency>        <dependency>            <groupId>org.projectlombok</groupId>            <artifactId>lombok</artifactId>            <version>1.18.38</version>            <scope>provided</scope>        </dependency>    </dependencies></project>